<resources>
    <string name="app_name">Sansui</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_msg">Login to Continue</string>
    <string name="username">Username</string>
    <string name="pass">Password</string>
    <string name="login">Login</string>
    <string name="alert">Alert</string>
    <string name="serch">Serch</string>
    <string-array name="imageChoose">
        <item>Camera</item>
        <item>Gallery</item>
    </string-array>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="organization">Organization Name</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_maps">Map</string>
    <string name="action_settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="logout_msg">Do you want to logout?</string>
    <string name="cancel">Cancel</string>
    <string name="year">Year</string>
    <string-array name="lang">
        <item>English</item>
        <item>Hindi</item>
        <item>Marathi</item>
    </string-array>
    <string name="running">Running</string>
    <string name="idle">Idle</string>
    <string name="parking">Parking</string>
    <string name="offline">Offline</string>
    <string name="alerts">Alerts</string>
    <string name="language">Language</string>
    <string name="tVehicles">Total Vehicle</string>
    <string name="about">About</string>
    <string name="dashboard">Dashboard</string>
    <string name="aHist">Alert History</string>
    <string name="faq">FAQ</string>
    <string name="vList">Vehicle List</string>
    <string name="search">Search</string>
    <string name="stop">Stop</string>
    <string name="tStop">Total Stop</string>
    <string name="avgSpeed">Avg Speed</string>
    <string name="maxSpeed">Max Speed</string>
    <string name="speed">Speed</string>
    <string name="odometer">Odometer</string>
    <string name="fuel">Fuel</string>
    <string name="ign">IGN</string>
    <string name="power">Power</string>
    <string name="gps">GPS</string>
    <string name="distance">Last Distance</string>
    <string name="duration">Last Duration</string>
    <string name="imei">IMEI : </string>
    <string name="VNumber">Vehicle Number : </string>
    <string name="vStatus">Vehicle Status : </string>
    <string name="lastLoc">Last Location : </string>
    <string name="lastUTime">Last Updated Time : </string>
    <string name="ignStatus">IGN Status : </string>
    <string name="powerStatus">Power Status : </string>
    <string name="gpsStatus">GPS Status : </string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="setting">Setting</string>
    <string name="sAlerts">Select Alerts</string>
    <string name="ok">Ok</string>
    <string name="low_battery">Low Battery</string>
    <string name="overspeed">Overspeed</string>
    <string name="sos">SOS</string>
    <string name="powercut">Powercut</string>
    <string name="ignition">Ignition</string>
    <string name="english">English</string>
    <string name="hindi">Hindi</string>
    <string name="marathi">Marathi</string>
    <string name="all">All</string>
    <string name="vehicle_summary">Travel Summary</string>
    <string name="v_summary">Travel Summary</string>
    <string name="vehicle_number">Vehicle Number</string>
    <string name="address">Address</string>
    <string name="last_update_dt">Last Update Dt</string>
    <string name="tracking_v">Tracking</string>
    <string name="s_st">Vehicle Status</string>
    <string name="distance_summary">Distance Summary</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="week">Week</string>
    <string name="day_before">Day Before</string>
    <string name="month">Month</string>
    <string name="time_duration">Start Date</string>
    <string name="end_duration">End Date</string>
    <string name="distance_travelled">Distance Travelled</string>
    <string name="start_location">Start Loaction</string>
    <string name="end_loaction">End Loaction</string>
    <string-array name="alerts_d">
        <item>Low Battery</item>
        <item>Overspeed</item>
        <item>SOS</item>
        <item>Powercut</item>
        <item>Ignition</item>
    </string-array>
    <string name="faq1">This caused by either of two potential issues:
\n1.	The device is not transmitting
\n\t\ta.	Poor wireless data coverage
\n\t\tb.	Poor antenna location resulting in deteriorated wireless data signal.
\n\t\tc.	Antenna not plugged into the device.
\n2.	The GPS unit cannot see the sky.
\n\t\ta.	Antenna facing downward.
\n\t\tb.	Poor antenna placement.
\n\t\tc.	Antenna is placed too far below the dash to have a good view of the sky.
\n\t\td.	On a new install, it may take several minutes for the GPS to establish location.
</string>
    <string name="faq2">The GPS unit does not have a good view of the sky.
\na.	When the vehicles are parked facing tall buildings (or in indoor garages or under metal awnings) large portions of the sky are often obscured.
\nb.	Antenna placement is critical to ensure reliable and accurate operation.
</string>
    <string name="faq3">In almost every case, this is because it’s a newly installed device and the unit hasn’t yet transmitted its first packet of data (and thus cannot appear on the map because we don’t yet know its location). It generally takes approx. 5 minutes after a new device has been powered up to begin transmitting.</string>
    <string-array name="list">
        <item>All</item>
        <item>Running</item>
        <item>Idle</item>
        <item>Offline</item>
        <item>Parking</item>
    </string-array>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="view">View</string>
    <string name="delete">Delete</string>
    <string name="in_alert">In Alert</string>
    <string name="out_alert">Out Alert</string>
    <string name="radius">Radius</string>
    <string name="set_geofence">Set Geofence</string>
    <string name="geofence_name">Geofence name</string>
    <string name="home">Home</string>
    <string name="school">School</string>
    <string name="work">Work</string>
</resources>