<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <vts.snystems.sns.vts.fonts.MyTextViewSmiBold
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="5pt"
                android:text="@string/set_geofence"
                android:textColor="@color/textColor"
                android:textSize="20dp"
                android:textStyle="bold" />

            <vts.snystems.sns.vts.fonts.MyEditextNormal
                android:id="@+id/et_geofence_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginRight="4pt"
                android:layout_marginLeft="4pt"
                android:padding="5pt"
                android:textColor="@color/textColor"
                android:hint="@string/geofence_name"
                android:singleLine="true"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="5pt">

                <vts.snystems.sns.vts.fonts.MyCheckbox
                    android:id="@+id/checkbox_home"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/textColor"
                    android:layout_weight="1"
                    android:text="@string/home" />

                <vts.snystems.sns.vts.fonts.MyCheckbox
                    android:id="@+id/checkbox_school"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/textColor"
                    android:layout_weight="1"
                    android:text="@string/school" />

                <vts.snystems.sns.vts.fonts.MyCheckbox
                    android:id="@+id/checkbox_work"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/textColor"
                    android:layout_weight="1"
                    android:text="@string/work" />
            </LinearLayout>
        </LinearLayout>
</RelativeLayout>