<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background"
    android:orientation="vertical"

    tools:context="vts.snystems.sns.vts.activity.ActivityLogin">

    <ImageView
        android:layout_width="140pt"
        android:layout_height="40pt"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center_horizontal"
        app:srcCompat="@drawable/ic_logo_benosys"
        android:layout_marginTop="30dp" />

    <vts.snystems.sns.vts.fonts.MyTextViewSmiBold
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/welcome"
        android:textColor="@color/colorWhite"
        android:textSize="30sp"
        android:textStyle="bold" />

    <vts.snystems.sns.vts.fonts.MyTextViewNormal
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"

        android:layout_marginTop="4dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/welcome_msg"
        android:textColor="@color/colorWhite"
        android:textSize="22sp" />


    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:layout_margin="15dp"
        card_view:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <vts.snystems.sns.vts.fonts.MyEditextNormal
                android:id="@+id/usernameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5pt"
                android:inputType="text|textNoSuggestions"
                android:imeOptions="actionNext"
                android:hint="@string/username"
                android:textColor="@color/colorBlack"

                android:textSize="18sp" />

            <vts.snystems.sns.vts.fonts.MyEditestPass
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword|textNoSuggestions"
                android:imeOptions="actionDone"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5pt"
                android:hint="@string/pass"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"
                app:drawable_hide="@drawable/ic_visibility_black_36dp"
                app:drawable_show="@drawable/ic_visibility_off_black_36dp"/>

            <vts.snystems.sns.vts.fonts.MyCheckbox
                android:id="@+id/rememberPasswordCheckBox"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/editTextPassword"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="7dp"
                android:text="Keep me logged in"
                android:textColor="@color/colorBlack" />


            <vts.snystems.sns.vts.fonts.MyButtonNormal

                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/back_gradint"
                android:baselineAligned="false"

                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="20sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="4pt"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
