<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView_1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="center"

        app:cardCornerRadius="4dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <vts.snystems.sns.vts.fonts.MyTextViewSmiBold
                android:id="@+id/txt_geo_fence_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5pt"
                android:layout_weight="1"
                android:text="Geofence Name"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3pt"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <vts.snystems.sns.vts.fonts.MyTextViewNormal
                        android:id="@+id/infoTextIn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/in_alert"
                        android:drawableLeft="@drawable/ic_info_outline_black_one_24dp"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

                    <android.support.v7.widget.SwitchCompat
                        android:id="@+id/switch_arrive"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="3pt"
                        android:clickable="true" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <vts.snystems.sns.vts.fonts.MyTextViewNormal
                        android:id="@+id/infoTextOut"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/out_alert"
                        android:drawableLeft="@drawable/ic_info_outline_black_one_24dp"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

                    <android.support.v7.widget.SwitchCompat
                        android:id="@+id/switch_depart"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="3pt"
                        android:clickable="true" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <vts.snystems.sns.vts.fonts.MyTextViewNormal
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/radius"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

                    <vts.snystems.sns.vts.fonts.MyTextViewNormal
                        android:id="@+id/geofenceRadious"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="3pt"
                        android:text="5" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3pt"
                android:orientation="horizontal">

                <vts.snystems.sns.vts.fonts.MyButtonNormal
                    android:id="@+id/btn_geo_fence_view"
                    android:layout_width="fill_parent"
                    android:layout_height="15pt"
                    android:layout_marginRight="1pt"
                    android:layout_weight="1"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/view"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite" />

                <vts.snystems.sns.vts.fonts.MyButtonNormal
                    android:id="@+id/btn_geo_fence_delete"
                    android:layout_width="fill_parent"
                    android:layout_height="15pt"
                    android:layout_marginLeft="1pt"
                    android:layout_weight="1"
                    android:background="@color/textColor"
                    android:text="@string/delete"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite" />
            </LinearLayout>


        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>